documentation update for Java 24+ warning about java.lang.Runtime::Load; preparing 1.4.2 release